<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.4</version>
		<relativePath/>
	</parent>
	<groupId>com.dieti</groupId>
	<artifactId>dietiestatesbackend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>DietiEstatesBackend</name>
	<description>Backend for DietiEstates25</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
	    <java.version>21</java.version>
	    <jjwt.version>0.12.7</jjwt.version>
	    <org.mapstruct.version>1.6.3</org.mapstruct.version>
		<lombok.version>1.18.38</lombok.version>
	</properties>
	<dependencies>
	    <!-- Spring Boot Core -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter</artifactId>
	    </dependency>

	    <!-- Spring Boot Web -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-web</artifactId>
	    </dependency>

	    <!-- Spring Security -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-security</artifactId>
	    </dependency>

	    <!-- Spring Security OAuth2 Client -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-oauth2-client</artifactId>
	    </dependency>

	    <dependency>
	        <groupId>org.springframework</groupId>
	        <artifactId>spring-context</artifactId>
	        <version>6.2.10</version>
	    </dependency>

	    <!-- Validation Starter -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-validation</artifactId>
	    </dependency>

	    <!-- Spring Data JPA -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-data-jpa</artifactId>
	    </dependency>

	    <!-- SendGrid for email sending -->
	    <dependency>
	        <groupId>com.sendgrid</groupId>
	        <artifactId>sendgrid-java</artifactId>
	        <version>4.9.3</version>
	    </dependency>

		<!-- PostgreSQL Driver -->
	    <dependency>
	        <groupId>org.postgresql</groupId>
	        <artifactId>postgresql</artifactId>
	        <version>42.7.7</version>
	        <scope>runtime</scope>
	    </dependency>

	    <!-- Flyway -->
	    <dependency>
	        <groupId>org.flywaydb</groupId>
	        <artifactId>flyway-core</artifactId>
	        <version>11.11.1</version>
	    </dependency>

	    <!-- JWT Support -->
	    <dependency>
	        <groupId>io.jsonwebtoken</groupId>
	        <artifactId>jjwt-api</artifactId>
	        <version>${jjwt.version}</version>
	    </dependency>
	    <dependency>
	        <groupId>io.jsonwebtoken</groupId>
	        <artifactId>jjwt-impl</artifactId>
	        <version>${jjwt.version}</version>
	        <scope>runtime</scope>
	    </dependency>
	    <dependency>
	        <groupId>io.jsonwebtoken</groupId>
	        <artifactId>jjwt-jackson</artifactId>
	        <version>${jjwt.version}</version>
	        <scope>runtime</scope>
	    </dependency>

	    <dependency>
	        <groupId>com.google.api-client</groupId>
	        <artifactId>google-api-client</artifactId>
	        <version>2.8.1</version>
	    </dependency>
	    <dependency>
	        <groupId>com.google.http-client</groupId>
	        <artifactId>google-http-client-gson</artifactId>
	        <version>2.0.0</version>
	    </dependency>
	    <dependency>
	        <groupId>com.google.cloud.sql</groupId>
	        <artifactId>postgres-socket-factory</artifactId>
	        <version>1.25.3</version>
	    </dependency>

	    <!-- Optional: For development tools -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-devtools</artifactId>
	        <scope>runtime</scope>
	        <optional>true</optional>
	    </dependency>

	    <!-- Optional: For testing -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-test</artifactId>
	        <scope>test</scope>
	    </dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>

	    <!-- Optional: For H2 in-memory database (for testing) -->
	    <dependency>
	        <groupId>com.h2database</groupId>
	        <artifactId>h2</artifactId>
	        <scope>test</scope>
	    </dependency>

	    <!-- Lombok: reduce boilerplate -->
	    <dependency>
	        <groupId>org.projectlombok</groupId>
	        <artifactId>lombok</artifactId>
	        <version>1.18.38</version>
	        <scope>provided</scope>
	    </dependency>
	
	    <!-- MapStruct: compile-time mapper generation -->
	    <dependency>
	        <groupId>org.mapstruct</groupId>
	        <artifactId>mapstruct</artifactId>
	        <version>1.6.3</version>
	    </dependency>
	   
	    <!-- WebFlux: reactive HTTP client (WebClient) used for external geocoding calls -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-webflux</artifactId>
	    </dependency>
	      <!-- Spring Boot Cache -->
	      <dependency>
	          <groupId>org.springframework.boot</groupId>
	          <artifactId>spring-boot-starter-cache</artifactId>
	      </dependency>
		<!-- Per Azure Blob Storage -->
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-storage-blob</artifactId>
			<version>12.31.2</version>
		</dependency>
		<!-- Per la generazione di ULID -->
		<dependency>
			<groupId>com.github.f4b6a3</groupId>
			<artifactId>ulid-creator</artifactId>
			<version>5.2.3</version>
		</dependency>
		<!-- Apache Commons IO per la manipolazione di InputStream, ci serve per controllare il tipo di file -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.20.0</version>
		</dependency>
	</dependencies>

	<build>
	    <plugins>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-compiler-plugin</artifactId>
	            <version>3.10.1</version>
	            <configuration>
	                <release>${java.version}</release>
	                <fork>true</fork>
	                <compilerArgs>
	                    <arg>-parameters</arg>
	                </compilerArgs>
	                <annotationProcessorPaths>
	                    <path>
	                        <groupId>org.projectlombok</groupId>
	                        <artifactId>lombok</artifactId>
	                        <version>${lombok.version}</version>
	                    </path>
	                    <path>
	                        <groupId>org.mapstruct</groupId>
	                        <artifactId>mapstruct-processor</artifactId>
	                        <version>${org.mapstruct.version}</version>
	                    </path>
	                       <!-- Aggiungo questo per garantire l'ordine corretto di esecuzione -->
	                       <path>
	                           <groupId>org.projectlombok</groupId>
	                           <artifactId>lombok-mapstruct-binding</artifactId>
	                           <version>0.2.0</version>
	                       </path>
	                </annotationProcessorPaths>
	            </configuration>
	        </plugin>
	        <plugin>
	            <groupId>org.springframework.boot</groupId>
	            <artifactId>spring-boot-maven-plugin</artifactId>
	        </plugin>
	    </plugins>
	</build>

</project>
